# SHM-Dream-team-

./: .clang-format  .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt  Game.cpp  Island.cpp  Map.cpp  Player.cpp  main.cpp
game/data/: config.json
include/game/: Coordinates.hpp  Game.hpp  Island.hpp  IslandInterface.hpp  Map.hpp  Player.hpp
test/: CMakeLists.txt  CoordinatesTest.cpp  sample-ut.cpp
utility/: CMakeLists.txt  Json.cpp  Json.hpp  JsonSerializer.cpp  JsonSerializer.hpp  jsonMain.cpp
utility/json/: CMakeLists.txt  Json.cpp  Json.hpp  JsonConvert.hpp  JsonSerializer.cpp  JsonSerializer.hpp
utility/json/example/: CMakeLists.txt  jsonMain.cpp
